--- a/swiggy-app/src/app/popular-brand/popular-brand.component.scss
+++ b/swiggy-app/src/app/popular-brand/popular-brand.component.scss
@@ -1,5 +1,6 @@
 ion-card-title {
     font-size: 20px;
+    font-weight: bolder;
 }
 
 .card-size {
