--- a/swiggy-app/src/app/today-features/today-features.component.scss
+++ b/swiggy-app/src/app/today-features/today-features.component.scss
@@ -57,6 +57,7 @@ ion-card {
 
 ion-card-title {
   font-size: 20px;
+  font-weight: bolder;
 }
 ion-card-content {
   padding: 0;
